# PeGaSUS

./: .codedocs  .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  README.md  TODO.md  TODO.txt  main.cpp  run_cmake.sh  travis.sh
cmake/: doxygen.cfg.in
cmake/include/: main.hpp
cmake/modules/: CodeCoverage.cmake  functions.cmake
cmake/run/: clang-5_debug.sh  clang-6_debug.sh  gnu-7_debug.sh  gnu_debug.sh
cmake/toolchains/: clang-5.cmake  clang-6.cmake  default_gnu.cmake  gnu-7.cmake
configure/: config.h.in  doxygen.cfg.in
doc/: CMakeLists.txt  getting_started.dox  mainpage.dox  software.dox
getting_started/boost/: Makefile  a.out  ex1.cpp
getting_started/boost/test/: .boost_dyn.cpp.swp  .ex1_dyn.cpp.swp  Makefile  a.out  boost_dyn.cpp  ex1.cpp  ex1_dyn.cpp  ex2.cpp  info.txt
getting_started/eigen/: Makefile  a.out  ex1.cpp  ex2.cpp
src/: CMakeLists.txt  main.cpp  main.hpp.in
src/pegasus/: license_header.cc
